--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ share/python-wheels/
 MANIFEST
 
 experiments/*.gif
+experiments/tmp
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
