--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,9 @@ share/python-wheels/
 *.egg
 MANIFEST
 
-experiments/*.gif
-experiments/tmp
+examples/*.txt
+examples/*.gif
+examples/tmp
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
